--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "npx tsx index.ts"
+    "start": "npx tsx index.ts",
+    "list-models": "npx tsx list-models.ts"
   },
   "overrides": {
     "whatwg-url": "13.0.0"
